# wimble

./: .gitignore  Cargo.toml  README.md  config.rs.back  config.toml  config.toml.example  flake.nix
src/: browser.rs  command_parser.rs  command_source.rs  config.rs  lib.rs  main.rs  stdin_source.rs  streambot.rs
src/browser/: browser.rs  browser_interface.rs  mod.rs
tests/: browser_mock_tests.rs  command_parser_tests.rs  config_tests.rs  mocks.rs
