[package]
name = "wimble"
version = "0.1.0"
edition = "2021"

[dependencies]
toml = "0.8.19"
twitch-irc = { version = "5.0.1", features = ["full"]   }
tokio = { version = "1.43.0", features = ["full", "rt-multi-thread"] }
thirtyfour = "0.35.0"
#serde =  { version = "1.0.217", features = ["derive"] }
lazy_static = "1.5.0"