[package]
name = "wimble"
version = "0.1.0"
edition = "2021"


[dependencies]
toml = "0.8.19"

twitch-irc = { version = "5.0.1", features = ["refreshing-token-native-tls"]}
tokio = { version = "1.43.0", features = ["full", "rt-multi-thread"] }
thirtyfour = "0.35.0"
serde =  { version = "1.0.218", features = ["derive"] }
serde_derive = "1.0.219"
lazy_static = "1.5.0"
proc-macro2 = "1.0.94"
quote = "1.0.39"
syn = "2.0.99"
config = "0.15.9"
async-trait = "0.1.87"
futures = "0.3.31"