[package]
name = "wimble"
version = "0.1.0"
edition = "2021"


[dependencies]
toml = "0.8.19"

twitch-irc = { version = "5.0.1", features = ["refreshing-token-native-tls"]}
tokio = { version = "1.43.0", features = ["full", "rt-multi-thread"] }
thirtyfour = { version = "0.35.0" }
serde =  { version = "1.0.218", features = ["derive"] }
config = "0.15.9"
